--- a/eks_deployments.yaml
+++ b/eks_deployments.yaml
@@ -57,7 +57,7 @@ spec:
       hostNetwork: true
       containers:
       - name: vue-project
-        image: public.ecr.aws/l1z2o5a3/vue-app:v1
+        image: public.ecr.aws/l1z2o5a3/vue-app:latest
         ports:
         - containerPort: 80
 
