--- a/kubernetes/monitoring/base/crds/kustomization.yaml
+++ b/kubernetes/monitoring/base/crds/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - 0alertmanagerConfigCustomResourceDefinition.yaml
-  - 0alertmanagerCustomResourceDefinition.yaml
+  # - 0alertmanagerConfigCustomResourceDefinition.yaml
+  # - 0alertmanagerCustomResourceDefinition.yaml
   - 0podmonitorCustomResourceDefinition.yaml
   - 0probeCustomResourceDefinition.yaml
   - 0prometheusCustomResourceDefinition.yaml
