--- a/kubernetes/monitoring/base/manifests/kustomization.yaml
+++ b/kubernetes/monitoring/base/manifests/kustomization.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- alertmanager-alertmanager.yaml
-- alertmanager-networkPolicy.yaml
-- alertmanager-podDisruptionBudget.yaml
-- alertmanager-prometheusRule.yaml
-- alertmanager-secret.yaml
-- alertmanager-service.yaml
-- alertmanager-serviceAccount.yaml
-- alertmanager-serviceMonitor.yaml
+# - alertmanager-alertmanager.yaml
+# - alertmanager-networkPolicy.yaml
+# - alertmanager-podDisruptionBudget.yaml
+# - alertmanager-prometheusRule.yaml
+# - alertmanager-secret.yaml
+# - alertmanager-service.yaml
+# - alertmanager-serviceAccount.yaml
+# - alertmanager-serviceMonitor.yaml
 - app-service-monitor.yaml
 - grafana-config.yaml
 - grafana-dashboardDatasources.yaml
@@ -30,12 +30,12 @@ resources:
 - kubeStateMetrics-service.yaml
 - kubeStateMetrics-serviceAccount.yaml
 - kubeStateMetrics-serviceMonitor.yaml
-- kubernetesControlPlane-prometheusRule.yaml
-- kubernetesControlPlane-serviceMonitorApiserver.yaml
-- kubernetesControlPlane-serviceMonitorCoreDNS.yaml
-- kubernetesControlPlane-serviceMonitorKubeControllerManager.yaml
-- kubernetesControlPlane-serviceMonitorKubeScheduler.yaml
-- kubernetesControlPlane-serviceMonitorKubelet.yaml
+# - kubernetesControlPlane-prometheusRule.yaml
+# - kubernetesControlPlane-serviceMonitorApiserver.yaml
+# - kubernetesControlPlane-serviceMonitorCoreDNS.yaml
+# - kubernetesControlPlane-serviceMonitorKubeControllerManager.yaml
+# - kubernetesControlPlane-serviceMonitorKubeScheduler.yaml
+# - kubernetesControlPlane-serviceMonitorKubelet.yaml
 - prometheus-clusterRole.yaml
 - prometheus-clusterRoleBinding.yaml
 - prometheus-networkPolicy.yaml
