--- a/kubernetes/monitoring/base/operator/kustomization.yaml
+++ b/kubernetes/monitoring/base/operator/kustomization.yaml
@@ -2,20 +2,20 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- prometheusAdapter-apiService.yaml
-- prometheusAdapter-clusterRole.yaml
-- prometheusAdapter-clusterRoleAggregatedMetricsReader.yaml
-- prometheusAdapter-clusterRoleBinding.yaml
-- prometheusAdapter-clusterRoleBindingDelegator.yaml
-- prometheusAdapter-clusterRoleServerResources.yaml
-- prometheusAdapter-configMap.yaml
-- prometheusAdapter-deployment.yaml
-- prometheusAdapter-networkPolicy.yaml
-- prometheusAdapter-podDisruptionBudget.yaml
-- prometheusAdapter-roleBindingAuthReader.yaml
-- prometheusAdapter-service.yaml
-- prometheusAdapter-serviceAccount.yaml
-- prometheusAdapter-serviceMonitor.yaml
+# - prometheusAdapter-apiService.yaml
+# - prometheusAdapter-clusterRole.yaml
+# - prometheusAdapter-clusterRoleAggregatedMetricsReader.yaml
+# - prometheusAdapter-clusterRoleBinding.yaml
+# - prometheusAdapter-clusterRoleBindingDelegator.yaml
+# - prometheusAdapter-clusterRoleServerResources.yaml
+# - prometheusAdapter-configMap.yaml
+# - prometheusAdapter-deployment.yaml
+# - prometheusAdapter-networkPolicy.yaml
+# - prometheusAdapter-podDisruptionBudget.yaml
+# - prometheusAdapter-roleBindingAuthReader.yaml
+# - prometheusAdapter-service.yaml
+# - prometheusAdapter-serviceAccount.yaml
+# - prometheusAdapter-serviceMonitor.yaml
 - prometheusOperator-clusterRole.yaml
 - prometheusOperator-clusterRoleBinding.yaml
 - prometheusOperator-deployment.yaml
