--- a/kubernetes/monitoring/base/manifests/kustomization.yaml
+++ b/kubernetes/monitoring/base/manifests/kustomization.yaml
@@ -30,12 +30,12 @@ resources:
 - kubeStateMetrics-service.yaml
 - kubeStateMetrics-serviceAccount.yaml
 - kubeStateMetrics-serviceMonitor.yaml
-# - kubernetesControlPlane-prometheusRule.yaml
-# - kubernetesControlPlane-serviceMonitorApiserver.yaml
-# - kubernetesControlPlane-serviceMonitorCoreDNS.yaml
-# - kubernetesControlPlane-serviceMonitorKubeControllerManager.yaml
-# - kubernetesControlPlane-serviceMonitorKubeScheduler.yaml
-# - kubernetesControlPlane-serviceMonitorKubelet.yaml
+- kubernetesControlPlane-prometheusRule.yaml
+- kubernetesControlPlane-serviceMonitorApiserver.yaml
+- kubernetesControlPlane-serviceMonitorCoreDNS.yaml
+- kubernetesControlPlane-serviceMonitorKubeControllerManager.yaml
+- kubernetesControlPlane-serviceMonitorKubeScheduler.yaml
+- kubernetesControlPlane-serviceMonitorKubelet.yaml
 - prometheus-clusterRole.yaml
 - prometheus-clusterRoleBinding.yaml
 - prometheus-networkPolicy.yaml
