--- a/kubernetes/monitoring/base/manifests/kustomization.yaml
+++ b/kubernetes/monitoring/base/manifests/kustomization.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-# - alertmanager-alertmanager.yaml
-# - alertmanager-networkPolicy.yaml
-# - alertmanager-podDisruptionBudget.yaml
-# - alertmanager-prometheusRule.yaml
-# - alertmanager-secret.yaml
-# - alertmanager-service.yaml
-# - alertmanager-serviceAccount.yaml
-# - alertmanager-serviceMonitor.yaml
+- alertmanager-alertmanager.yaml
+- alertmanager-networkPolicy.yaml
+- alertmanager-podDisruptionBudget.yaml
+- alertmanager-prometheusRule.yaml
+- alertmanager-secret.yaml
+- alertmanager-service.yaml
+- alertmanager-serviceAccount.yaml
+- alertmanager-serviceMonitor.yaml
 - app-service-monitor.yaml
 - grafana-config.yaml
 - grafana-dashboardDatasources.yaml
